name:                halk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JelF/halk#readme
license:             BSD3
license-file:        LICENSE
author:              JelF
maintainer:          begdory4@gmail.com
copyright:           JelF
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Heat.Browser
                     , Heat.Browser.Body
                     , Heat.Browser.Document
                     , Heat.Browser.DOMElement
                     , Heat.Browser.DOMHTMLElement
                     , Heat.Browser.DOMNode
                     , Heat.Browser.GenericDOMHTMLElement
                     , Heat.Browser.Window

                     , Heat.JSVal
                     , Heat.JSVal.FromJSVal
                     , Heat.JSVal.JSArray
                     , Heat.JSVal.JSChar
                     , Heat.JSVal.JSInt
                     , Heat.JSVal.ToJSVal

  other-modules:       Heat.JSVal.Lift
  extensions:          JavaScriptFFI

  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base >= 0.2.0
  default-language:    Haskell2010

executable halk
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , halk
                     , ghcjs-base
  default-language:    Haskell2010

test-suite halk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , halk
                     , hspec
  js-sources:          node_modules/lodash/lodash.js
                     , test/imports.js
  other-modules:       Heat.Browser.GenericDOMHTMLElementSpec
                     , Heat.JSValSpec
                     , Support.JSTest
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JelF/halk
